# cross_compilation_rpi_pi_4_aarch64

./: .clang-format  .gitignore  CMakeLists.txt  README.md  main.cpp  rpi.tar.xz
.devcontainer/: .env  Dockerfile  devcontainer.json  docker-compose.yml
cmake/: aarch64-rpi4-linux-gnu-clang.cmake  aarch64-rpi4-linux-gnu.cmake
src/: CMakeLists.txt  DataHandler.cpp  DataHandler.h  DataQueue.cpp  DataQueue.h  DeviceManager.h  DeviceManagerRtl.cpp  DeviceManagerRtl.h  DeviceStream.h  DeviceStreamRtl.cpp  DeviceStreamRtl.h  Utility.h  main.cpp
tools/: style_check.sh
